--- a/index.qmd
+++ b/index.qmd
@@ -12,15 +12,14 @@ Dies ist das Skript zur *Videoserie Mehrebenenregression mit R*, die für die St
 
 Diese Videoserie besteht aus sechs aufeinander aufbauenden Teilen:
 
--   Teil 1: Was ist eine Mehrebenenregression? \[[Video](https://video.fernuni-hagen.de/Play/6076)\] 
--   Teil 2: Wann ist eine Mehrebenenregression angebracht? \[ [Video](https://video.fernuni-hagen.de/Play/6077)\]
--   Teil 3: Wie werden die Daten für eine Mehrebenregression vorbereitet? \[ [Video](https://video.fernuni-hagen.de/Play/6078)\]
--   Teil 4: Wie schätzt man eine Mehrebenenregression in R? \[[Video](https://video.fernuni-hagen.de/Play/6089)\]
--   Teil 5: Wie schätzt man variierende Slopes und Cross-Level Interaktionen? \[[Video](https://video.fernuni-hagen.de/Play/6147)\]
--   Teil 6: Wie lassen sich die Ergebnisse einer Mehrebenregression berichten? \[[Video](https://video.fernuni-hagen.de/Play/6148)\]
+-   Teil 1: Was ist eine Mehrebenenregression? \[ [Video (18 Min.)](https://video.fernuni-hagen.de/Play/6076) \]
+-   Teil 2: Wann ist eine Mehrebenenregression angebracht? \[  [Video (31 Min.)](https://video.fernuni-hagen.de/Play/6077) \]
+-   Teil 3: Wie werden die Daten für eine Mehrebenregression vorbereitet? \[ [Video (19 Min.)](https://video.fernuni-hagen.de/Play/6078) \]
+-   Teil 4: Wie schätzt man eine Mehrebenenregression in R? \[ [Video (23 Min.)](https://video.fernuni-hagen.de/Play/6089) \]
+-   Teil 5: Wie schätzt man variierende Slopes und Cross-Level Interaktionen? \[ [Video (27 Min.)](https://video.fernuni-hagen.de/Play/6147) \]
+-   Teil 6: Wie lassen sich die Ergebnisse einer Mehrebenregression berichten? \[[Video (18 Min.)](https://video.fernuni-hagen.de/Play/6148) \]
 
-Zu allen Videos gibt es auf dieser Seite den R Code sowie das Skript. 
-
+Zu allen Videos gibt es auf dieser Seite den R Code sowie das Skript.
 
 ## Die Kurzfassung
 
@@ -35,7 +34,9 @@ Zum Beispiel:
 
 Immer wenn die übergeordnete Ebene für ausreichend große Varianz in den Daten sorgt, ist eine einfache Regression ungeeignet. Zum einen werden die Standardfehler unterschätzt. Die Mehrebenenregression schätzt diese korrekt. Außerdem erlaubt es die Mehrebenenregression, die komplexe Datenstruktur elegant zu modellieren und in greifbaren *quantities of interest* auszudrücken.
 
-Mit der Mehrebenenregression kann man die welche Wechselwirkungen zwischen den unterschidlichen Ebenen besser modellieren und statistisch prüfen, ob diese Unterschiede tatsöächlich bedeutsam sind.
+Mit der Mehrebenenregression kann man die welche Wechselwirkungen zwischen den unterschiedlichen Ebenen besser modellieren und statistisch prüfen, ob diese Unterschiede tatsächlich bedeutsam sind.
+
+![](./Grafiken/varianten.png){fig-align="left"}
 
 ## Voraussetzungen
 
@@ -51,3 +52,5 @@ BA oder MA Studierende aus Wirtschafts- und Sozialwissenschaften, Psychologie od
 -   Pötschke, Manuela. (2020). Mehrebenenmodelle. In: Wagemann, Claudius; Goerres, Achim; Siewert, Markus B. (Hrsg.): Handbuch Methoden der Politikwissenschaft. Springer VS, Wiesbaden. <https://doi.org/10.1007/978-3-658-16936-7_29>
 -   Gellman, Andrew; Hill, Jennifer (2009): Data-Analysis Using regression and Multilevel/Hierachical Models. Cambridge: Cambridge University Press. Kap. 12 & 13. <https://doi.org/10.1017/CBO9780511790942>
 -   Fox, John 2016: Applied Regression Analysis and Generalized Linear Models. Sage. Chp 23 Linear Mixed-Effects Models for Hierarchical and Longitudinal Data 700-742.
+
+<img src="https://vg08.met.vgwort.de/na/4fd8f4b4a4094df5b6949ac943c97deb" width="1" height="1" alt="">
